--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: ""
 
 # If you're using GitHub pages without a custom domain, this is "https://[github username].github.io"
 # If you're using GitHub pages with a custom domain, this is "http://[your domain]" (or https if you're using SSL)
-url: "https://mlh.github.io"
+url: "https://nosnevel.github.io"
 
 # The ability to use custom themes.
 style:
@@ -20,11 +20,11 @@ tracking:
 
 # Let people connect & engage with you through social media.
 social:
-  twitter_handle: "MLHacks"
+  twitter_handle: ""
 
 # This is Search Engine Optimization. It'll help your website look better on search.
 seo:
-  title:       "Example Hacks | 5/6 August 2016"
+  title:       "Exym Hackathon"
   description: "This is a sample hackathon website that you can use by following instructions on GitHub."
   image:       "https://prime.mlh.io/img/logos/mlh-prime-color.svg"
 
@@ -36,9 +36,9 @@ event:
   location:    "Holmdel, NJ, United States"
 
   trust_badge:
-    year:   "2017"  # season year
-    region: "eu"    # "na" or "eu"
-    color:  "white" # "white", "black", "gray", "red", "blue" or "yellow"
+    year:   "2021"  # season year
+    region: "na"    # "na" or "eu"
+    color:  "red" # "white", "black", "gray", "red", "blue" or "yellow"
 
   hero:
     links:
